Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 <p><a href="https://raw.githubusercontent.com/Stunt/watcher/master/LICENSE"><img src="https://img.shields.io/badge/license-MIT-blue.svg" alt="GitHub license"></a>
 <a href="https://packagist.org/packages/stunt/watcher"><img src="https://img.shields.io/packagist/v/stunt/watcher.svg?style=flat-square" alt="Latest Stable Version"></a>
 <a href="https://php.net/"><img src="https://img.shields.io/badge/php-%3E%3D%205.5.9-8892BF.svg?style=flat-square" alt="Minimum PHP Version"></a>
-<a href="https://travis-ci.org/Stunt/watcher"><img src="https://travis-ci.org/Stunt/watcher.svg?branch=master" alt="Build Status"></a></p>
+<a href="https://travis-ci.org/Stunt/watcher"><img src="https://travis-ci.org/Stunt/watcher.svg?branch=master" alt="Build Status"></a>
+<a href="https://insight.sensiolabs.com/projects/766f28cd-7811-4b53-b2fb-974332d59023"><img src="https://insight.sensiolabs.com/projects/766f28cd-7811-4b53-b2fb-974332d59023/mini.png" alt="SensioLabsInsight"></a></p>
 
 <h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
