Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 <h2>
 <a id="example-usage" class="anchor" href="#example-usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example Usage</h2>
 
-<pre><code>$ bin/watcher phpunit src/ tests/
+<pre><code>$ watcher phpunit ./
+</code></pre>
+
+<pre><code>$ watcher 'clear &amp;&amp; phpunit -c phpunit.xml' src/ tests/
 </code></pre>
       </section>
       <footer>
