Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 
 <pre><code>$ watcher 'clear &amp;&amp; phpunit -c phpunit.xml' src/ tests/
 </code></pre>
+
+<pre><code>$ watcher 'docker run unitests' src/ tests/
+</code></pre>
+
+<pre><code>$ watcher 'docker exec project-container behat' src/ tests/features/
+</code></pre>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/Stunt">Stunt</a></p>
